PostGIS 3.1.0
2020/XX/XX

* Deprecated signatures *
  - Function postgis_svn_version() replaced by postgis_lib_revision()
    (Sandro Santilli)

* Breaking changes *
  -

* New features *

* Enhancements *
  - #4539, Unify libm includes (Raúl Marín)
  - #4569, Allow unknown SRID geometry insertion into typmod SRID column (Paul Ramsey)
  - #4149, ST_Simplify(geom, 0) is now O(N) (Darafei Praliaskouski)
  - #4574, Link Time Optimizations enabled (Darafei Praliaskouski)

* Bug fixes *
  - #4544, Fix leak when parsing a WKT geometry_list (Raúl Marín)
  - #4545, Fix leak in wkt_parser_triangle_new (Raúl Marín)
  - #4549, Fix several functions when the schema isn't the search_path (Raúl Marín)
  - #4546, Fix PLPGSQL functions missing the schema qualification (Raúl Marín)
  - #4558, Fix oversimplification of polygon inner rings (Raúl Marín)


PostGIS 3.0.0
2019/10/xx
This version requires PostgreSQL 9.5+-12 and GEOS >= 3.6+
Additional features enabled if you are running Proj6+, PostgreSQL 12, and GEOS 3.8.0

* New Features *
  - #2902, postgis_geos_noop (Sandro Santilli)
  - #4128, ST_AsMVT support for Feature ID (Stepan Kuzmin)
  - #4230, SP-GiST and GiST support for ND box operators overlaps, contains,
           within, equals (Esteban Zimányi and Arthur Lesuisse from Université
           Libre de Bruxelles (ULB), Darafei Praliaskouski)
  - #4171, ST_3DLineInterpolatePoint (Julien Cabieces, Vincent Mora)
  - #4311, Introduce WAGYU to validate MVT polygons. This option requires a C++11
           compiler and will use CXXFLAGS (not CFLAGS). Add `--without-wagyu`
           to disable this option and keep the behaviour from 2.5 (Raúl Marín)
  - #1833, ST_AsGeoJSON(row) generates full GeoJSON Features (Joe Conway)
  - #3687, Casts json(geometry) and jsonb(geometry) for implicit GeoJSON
           generation (Paul Ramsey)
  - #4198, Add ST_ConstrainedDelaunayTriangles SFCGAL function (Darafei
           Praliaskouski)

* Enhancements *